MELHORIA -> Adicionado mais testes unitarios na MainViewModel.